# script_comprimir_pdf

./: LICENSE  README.md  main.py  pyproject.toml
