[project]
name = "comprimir-pdf"
version = "0.1.0"
description = ""
authors = [{ name = "@fmota-dev", email = "fmota.web@gmail.com" }]
requires-python = ">=3.9,<3.14" # Ajuste para >=3.9
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "pikepdf (>=9.7.0,<10.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
]
